# swpt_trade

./: .dir-locals.el  .dockerignore  .envrc  .flake8  .gitignore  Dockerfile  LICENSE  README.md  build.py  development.env  docker-compose.yml  pyproject.toml  pytest.ini  release_to_dockerhub.sh  wsgi.py
.github/workflows/: release_image.yml  run_tests.yml
docker/: entrypoint.sh  gunicorn.conf.py  supervisord-all.conf  supervisord-solver.conf  supervisord-webserver.conf  supervisord-worker.conf  supervisord.conf
docker/oathkeeper/: config.yaml.template  rules.json.template
docker/pg/: create-users.sql
docker/rabbitmq/: enabled_plugins
docker/swagger-ui/: entrypoint.sh  envsubst-on-openapi.sh
hooks/: build
migrations/: env.py
migrations/versions/: 01a7c27aad49_.py  03c28224c356_.py  051a42229fb8_.py  057594dd2915_.py  0b11bd00a931_.py  0ba15c81c774_.py  0d26e6bd8dda_.py  0f527669467d_.py  0f5c5a48d8c7_.py  12a876a559e5_.py  17d88cf8bf72_.py  1de50df49d64_.py  22c78b7cb0d7_.py  22f3142acc31_.py  286d0ee4d117_.py  3184f1789ce3_.py  3bf885b27648_.py  49a0a194be9f_.py  53102e539bf1_.py  549f5c0df20e_.py  58431083893d_.py  5a97f4b5b023_.py  5aafeb2c295f_.py  5cf37db22a04_.py  627f3cc8a62d_.py  6ee6a75a1b25_.py  6f7ac686b16d_.py  7fda1e6bd6e9_.py  88cd664f51a3_.py  8fac77ce147a_.py  95e1fcb60dd0_.py  a288772708cb_.py  a66c8ef1577e_.py  a9e46738178c_.py  b3f985d02ae1_.py  bcb5a5b98779_.py  bfcaabe3e2b5_.py  (+18 more)
swpt_trade/: __init__.py  _matcher.py  actors.py  aggregation.pxd  aggregation.pyx  chores.py  cli.py  example.pxd  example.pyx  extensions.py  fetch_debtor_infos.py  matcher.pxd  matcher.pyx  matching.pxd  matching.pyx  pricing.pxd  pricing.pyx  roll_turns.py  run_transfers.py  run_turn_subphases.py  schemas.py  solve_turn.py  table_scanners.py  utils.py
tests/: __init__.py  conftest.py  test_actors.py  test_aggregation.pyx  test_cli.py  test_cymodules.py  test_dispatching_data.py  test_example.pyx  test_fetch_debtor_infos.py  test_matcher.pyx  test_matching.pyx  test_models.py  test_pricing.pyx  test_procedures.py  test_routes.py  test_run_transfers.py  test_schemas.py  test_solve_turn.py  test_utils.py
(+60 files in other folders)
