[tool.poetry]
name = "swpt-trade"
version = "0.1.0"
description = "Swaptacular service that performs circular trades between creditors"
authors = ["Evgeni Pandurski <epandurski@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.build]
script = "build.py"

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "*"
python-json-logger = "^2.0.4"
flask = "^2.2.5"
flask-cors = "^3.0.9"
flask-sqlalchemy = "^3.0.5"
flask-migrate = "^4.0.4"
flask-smorest = "^0.42.0"
psycopg = {extras = ["binary"], version = "^3.1.10"}
pika = "^1.3"
sqlalchemy = "^2.0.19"
alembic = "^1.8.1"
marshmallow = "^3.17.0"
swpt_pythonlib = {git = "https://github.com/swaptacular/swpt_pythonlib.git", tag = "v0.9.2"}
pytest = "^7.1.2"
pytest-mock = "^3.8.2"

[tool.poetry.group.dev.dependencies]
cython = "^3.0.5"

[build-system]
requires = ["poetry-core", "setuptools", "cython"]
build-backend = "poetry.core.masonry.api"
