[tool.poetry]
name = "swpt-trade"
version = "0.1.0"
description = "Swaptacular service that performs circular trades between creditors"
authors = ["Evgeni Pandurski <epandurski@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.build]
script = "build.py"

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "*"
python-json-logger = "^2.0.4"
flask = "^3.0.2"
flask-cors = "^4.0.0"
flask-sqlalchemy = "^3.0.5"
flask-migrate = "^4.0.4"
flask-smorest = "^0.43.0"
psycopg = {extras = ["binary"], version = "^3.1.10"}
pika = "^1.3"
sqlalchemy = "^2.0.19"
alembic = "^1.8.1"
marshmallow = "^3.17.0"
swpt_pythonlib = {git = "https://github.com/swaptacular/swpt_pythonlib.git", tag = "v0.9.5"}
pytest = "^7.1.2"
pytest-mock = "^3.8.2"

[tool.poetry.group.dev.dependencies]
cython = "^3.0.5"
pudb = "*"
python-dotenv = "^1.0.0"
pytest-pudb = "^0.7.0"
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.1.0"
mypy = "^0.961"
python-lsp-server = {extras = ["all"], version = "^1.7.2"}
black = "^23.7.0"

[build-system]
requires = ["poetry-core", "setuptools", "cython ~= 3.0.5"]
build-backend = "poetry.core.masonry.api"
